<resources>
    <string-array name="listaEvento">
        <item>Minicurso</item>
        <item>Palestra</item>
        <item>Oficina</item>
        <item>Apresentação</item>
    </string-array>

    <string-array name="andar">
        <item>1</item>
        <item>2</item>
        <item>-1</item>
    </string-array>

    <string name="app_name">LocEdu</string>
    <string name="adapter_setor_bloco_header_text">Bloco:</string>
    <string name="botaoCancelar">Cancelar</string>
    <string name="botaoSalvar">Salvar</string>
    <string name="botaoDeletar">Deletar</string>
    <string name="nomeSetor">Nome do setor</string>
    <string name="nomeResponsavel">Nome do responsável</string>
    <string name="telefone">Telefone</string>
    <string name="identificador">Identificador</string>
    <string name="bloco">Bloco</string>
    <string name="nomeLocal">Nome do local</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="responsavel">Responsável:</string>
    <string name="data">Data:</string>
    <string name="nomeEvento">Nome do evento</string>
    <string name="descricaoEvento">Descrição do evento</string>
    <string name="horario">Horario:</string>
    <string name="eventoDisponivel">Eventos:</string>
    <string name="id">ID:</string>
    <string name="novoSetor">Cadastrar Novo Setor</string>
    <string name="novoEvento">Cadastrar Novo Evento</string>
    <string name="novoLocal">Cadastrar Novo Local</string>
    <string name="locaisDentroSetor">Locais dentro do setor:</string>
    <string name="setoresDentroCampo">Setores dentro do campus</string>
    <string name="eventosDentroLocal">Eventos dentro do local:</string>
    <string name="informacoes">Informações</string>
    <string name="tipoEvento">Tipo de evento</string>
    <string name="title_activity_mapa">Map</string>
    <string name="respostaSim">Sim</string>
    <string name="respostaNao">Não</string>
    <string name="perguntaChegou">Você chegou ao seu destino?</string>
    <string name="perguntaQualidadeApp">Como você avalia o aplicativo?</string>
    <string name="perguntaExperiencia">Conte-nos sua experiência com o aplicativo</string>
    <string name="aguarde">Aguarde.</string>
    <string name="infoSetor">Informações do Setor</string>
    <string name="infoLocal">Informações do local</string>
    <string name="horarioFuncionamento">Horário de funcionamento</string>
    <string name="email">E-mail</string>
    <string name="andarLocal">Andar/Piso do local:</string>
    <string name="boasVindas">Seja muito bem vindo.</string>
    <string name="oQueFazer">O que gostaria de fazer?</string>
    <string name="seLocalizar">Se localizar através do mapa?</string>
    <string name="listarSetores">Ver lista de setores do campus?</string>
    <string name="aplicativoAjudou">O aplicativo te ajudou?</string>
    <string name="numerVagasEvento">Númer de vagas</string>
    <string name="distanciaDestino">Distância até o destino:</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="bemVindoAdm">Bem vindo administrador</string>
    <string name="visitanteCampus">Você é visitante no campus?</string>
    <string name="oSeuAplicativo">O seu aplicativo de informações e localização.</string>
    <string name="cadastroSite">Link para inscrição</string>
    <string name="cliqueAqui">Clique aqui.</string>
    <string name="inscricao">Inscrição</string>
    <string name="title_activity_menu_lateral">MenuLateral</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
