<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Home">

    <TextView
<<<<<<< HEAD
=======
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/boasVindas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
>>>>>>> origin/master
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
<<<<<<< HEAD
        android:layout_marginTop="120dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/oQueFazer"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
=======
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/oQueFazer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />
>>>>>>> origin/master

    <ImageView
        android:id="@+id/imgv_map_home"
        android:layout_width="146dp"
        android:layout_height="146dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="100dp"
        android:background="@color/colorPrimaryDark"
<<<<<<< HEAD
        android:tint="#05ADE8"
=======
        android:tint="@color/colorPrimary"
>>>>>>> origin/master
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_mapa" />

    <ImageView
        android:id="@+id/imgv_lista_home"
        android:layout_width="146dp"
        android:layout_height="146dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="100dp"
        android:background="@color/colorPrimaryDark"
        android:tint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_menu_lista" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="133dp"
        android:layout_height="46dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:text="@string/seLocalizar"
        app:layout_constraintBottom_toTopOf="@+id/imgv_map_home"
        app:layout_constraintEnd_toEndOf="@+id/imgv_map_home"
        app:layout_constraintStart_toStartOf="@+id/imgv_map_home" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="133dp"
        android:layout_height="46dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:text="@string/listarSetores"
        app:layout_constraintBottom_toTopOf="@+id/imgv_lista_home"
        app:layout_constraintEnd_toEndOf="@+id/imgv_lista_home"
        app:layout_constraintStart_toStartOf="@+id/imgv_lista_home" />
</android.support.constraint.ConstraintLayout>